@@ -4,10 +4,11 @@ import com.example.moneyway.ai.dto.request.AiPlanCreateRequestDto;
 import com.example.moneyway.ai.dto.request.TravelPlanRequestDto;
 import com.example.moneyway.ai.dto.response.DayPlanDto;
 import com.example.moneyway.ai.dto.response.PlaceDto;
+import com.example.moneyway.ai.dto.response.PlanResponseDto;
 import com.example.moneyway.place.domain.Place;
 import com.example.moneyway.place.repository.PlaceRepository;
-import com.example.moneyway.place.service.PlaceQueryService;
 import com.example.moneyway.plan.domain.Plan;
+import com.example.moneyway.plan.domain.PlanPlace;
 import com.example.moneyway.plan.repository.PlanRepository;
 import com.example.moneyway.user.domain.User;
 import jakarta.transaction.Transactional;
@@ -15,6 +16,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -22,130 +24,171 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class AiPlanService {
-    private final PlaceQueryService placeQueryService;
+
     private final PlanRepository planRepository;
     private final PlaceRepository placeRepository;
 
-    public List<DayPlanDto> generatePlan(TravelPlanRequestDto request) {
+    private static final double EARTH_RADIUS = 6371.0; // km
+
+    /** ✅ 거리 계산 (Haversine 공식) */
+    private double calculateDistance(double lat1, double lon1, double lat2, double lon2) {
+        double dLat = Math.toRadians(lat2 - lat1);
+        double dLon = Math.toRadians(lon2 - lon1);
+        double a = Math.sin(dLat / 2) * Math.sin(dLat / 2)
+                + Math.cos(Math.toRadians(lat1)) * Math.cos(Math.toRadians(lat2))
+                * Math.sin(dLon / 2) * Math.sin(dLon / 2);
+        double c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+        return EARTH_RADIUS * c;
+    }
+
+    /** ✅ 안전한 좌표 파싱 */
+    private Double safeParseDouble(String value) {
+        if (value == null || value.trim().isEmpty()) return null;
+        try {
+            return Double.parseDouble(value.trim());
+        } catch (NumberFormatException e) {
+            return null;
+        }
+    }
+
+    /** ✅ 시간대 매핑 로직 */
+    private final Map<String, LocalTime[]> timeMap = new HashMap<>() {{
+        put("오전", new LocalTime[]{LocalTime.of(9, 0), LocalTime.of(11, 0)});
+        put("점심", new LocalTime[]{LocalTime.of(11, 30), LocalTime.of(13, 0)});
+        put("카페", new LocalTime[]{LocalTime.of(13, 30), LocalTime.of(14, 30)});
+        put("오후1", new LocalTime[]{LocalTime.of(14, 30), LocalTime.of(16, 0)});
+        put("오후2", new LocalTime[]{LocalTime.of(16, 0), LocalTime.of(17, 30)});
+        put("저녁", new LocalTime[]{LocalTime.of(18, 0), LocalTime.of(19, 30)});
+        put("숙소", new LocalTime[]{LocalTime.of(20, 0), LocalTime.of(23, 0)});
+    }};
+
+
+    /** ✅ 여행 플랜 생성 */
+    public PlanResponseDto generatePlan(TravelPlanRequestDto request) {
         int totalBudget = request.getBudget();
         int totalDays = request.getDuration();
 
         List<Place> allPlaces = placeRepository.findAll();
-
         List<Place> validPlaces = allPlaces.stream()
-                .filter(p -> p.getNumericPrice() > 0)
-                .filter(p -> p.getCategory() != null)
-                .toList();
+                .filter(p -> p.getNumericPrice() > 0 && p.getCategory() != null)
+                .collect(Collectors.toList());
 
         Map<String, List<Place>> grouped = validPlaces.stream()
                 .collect(Collectors.groupingBy(p -> p.getCategory().getDisplayName()));
 
-        log.info("== 그룹핑된 카테고리 목록 ==");
-        grouped.forEach((key, value) -> log.info("카테고리: " + key + ", 개수: " + value.size()));
-
-        // 숙소 고급 선호
+        // ✅ 숙소 선택
         List<Place> lodgings = grouped.getOrDefault("숙소", Collections.emptyList()).stream()
                 .filter(p -> p.getPlaceName().contains("호텔"))
-                .sorted((a, b) -> Integer.compare(b.getNumericPrice(), a.getNumericPrice()))
+                .filter(p -> p.getNumericPrice() * totalDays <= totalBudget)
                 .collect(Collectors.toList());
 
         if (lodgings.isEmpty()) {
-            throw new IllegalArgumentException("예산 내 고급 호텔 숙소가 없습니다.");
+            throw new IllegalArgumentException("예산 내 숙소가 없습니다.");
         }
 
-        // 숙소 예산 최대한 활용
-        Place selectedLodging = lodgings.get(0);
-        for (Place lodging : lodgings) {
-            if (lodging.getNumericPrice() * totalDays <= totalBudget) {
-                selectedLodging = lodging;
-                break;
-            }
-        }
-
+        Place selectedLodging = lodgings.get(new Random().nextInt(lodgings.size()));
         int lodgingPerNight = selectedLodging.getNumericPrice();
         int totalLodgingCost = lodgingPerNight * totalDays;
         int activityBudget = totalBudget - totalLodgingCost;
-
         int dailyActivityBudget = activityBudget / totalDays;
 
-        double ratioMorning = 0.20;
-        double ratioLunch = 0.20;
-        double ratioAfternoon = 0.25;
-        double ratioDinner = 0.20;
-        double ratioCafe = 0.10;
+        Double baseLat = safeParseDouble(selectedLodging.getMapY());
+        Double baseLon = safeParseDouble(selectedLodging.getMapX());
+
+        double ratioMorning = 0.20, ratioLunch = 0.20, ratioAfternoon = 0.25, ratioDinner = 0.20, ratioCafe = 0.10;
 
         List<DayPlanDto> result = new ArrayList<>();
+        int totalUsedCost = 0;
 
         for (int day = 1; day <= totalDays; day++) {
             List<PlaceDto> dayPlaces = new ArrayList<>();
             int usedBudget = 0;
 
-            int budgetMorning = (int) (dailyActivityBudget * ratioMorning);
-            int budgetLunch = (int) (dailyActivityBudget * ratioLunch);
-            int budgetAfternoon = (int) (dailyActivityBudget * ratioAfternoon);
-            int budgetDinner = (int) (dailyActivityBudget * ratioDinner);
-            int budgetCafe = (int) (dailyActivityBudget * ratioCafe);
+            usedBudget += addOptimizedActivity(grouped.get("관광지"), (int) (dailyActivityBudget * ratioMorning), "오전", dayPlaces, baseLat, baseLon);
+            usedBudget += addOptimizedActivity(grouped.get("식당"), (int) (dailyActivityBudget * ratioLunch), "점심", dayPlaces, baseLat, baseLon);
+            usedBudget += addOptimizedActivity(grouped.get("카페"), (int) (dailyActivityBudget * ratioCafe), "카페", dayPlaces, baseLat, baseLon);
 
-            // 오전
-            usedBudget += addOptimizedActivity(grouped.get("관광지"), budgetMorning, "오전", 1, dayPlaces);
-            // 점심
-            usedBudget += addOptimizedActivity(grouped.get("식당"), budgetLunch, "점심", 1, dayPlaces);
-            // 오후
             List<Place> afternoonMix = new ArrayList<>();
             if (grouped.get("액티비티/체험") != null) afternoonMix.addAll(grouped.get("액티비티/체험"));
             if (grouped.get("관광지") != null) afternoonMix.addAll(grouped.get("관광지"));
-            usedBudget += addOptimizedActivity(afternoonMix, budgetAfternoon, "오후", 1, dayPlaces);
-            // 카페
-            usedBudget += addOptimizedActivity(grouped.get("카페"), budgetCafe, "카페", 1, dayPlaces);
-            // 저녁
-            usedBudget += addOptimizedActivity(grouped.get("식당"), budgetDinner, "저녁", 1, dayPlaces);
 
-            // 예산 남으면 오전/오후 추가
-            int remaining = dailyActivityBudget - usedBudget;
-            if (remaining > 0) {
-                usedBudget += addOptimizedActivity(grouped.get("관광지"), remaining / 2, "추가 활동", 1, dayPlaces);
-                usedBudget += addOptimizedActivity(afternoonMix, remaining / 2, "추가 활동", 1, dayPlaces);
-            }
+            usedBudget += addOptimizedActivity(afternoonMix, (int) (dailyActivityBudget * ratioAfternoon / 2), "오후1", dayPlaces, baseLat, baseLon);
+            usedBudget += addOptimizedActivity(afternoonMix, (int) (dailyActivityBudget * ratioAfternoon / 2), "오후2", dayPlaces, baseLat, baseLon);
 
-            // 숙소 추가
-            dayPlaces.add(new PlaceDto(
-                    selectedLodging.getPlaceName(),
-                    selectedLodging.getCategory().getDisplayName(),
-                    "숙소",
-                    lodgingPerNight
-            ));
+            usedBudget += addOptimizedActivity(grouped.get("식당"), (int) (dailyActivityBudget * ratioDinner), "저녁", dayPlaces, baseLat, baseLon);
 
-            result.add(new DayPlanDto(day + "일차", dayPlaces));
+            dayPlaces.add(new PlaceDto(selectedLodging.getPlaceName(), selectedLodging.getCategory().getDisplayName(), "숙소", lodgingPerNight));
+
+            int dayUsedCost = dayPlaces.stream().mapToInt(PlaceDto::cost).sum();
+            totalUsedCost += dayUsedCost;
+
+            result.add(new DayPlanDto(day + "일차", dayPlaces, totalBudget, dayUsedCost));
         }
 
-        return result;
+        return new PlanResponseDto(totalUsedCost, result);
     }
 
-    private int addOptimizedActivity(List<Place> list, int maxBudget, String time, int maxCount, List<PlaceDto> target) {
+    private int addOptimizedActivity(List<Place> list, int maxBudget, String time, List<PlaceDto> target, double baseLat, double baseLon) {
         if (list == null || list.isEmpty()) return 0;
 
         List<Place> filtered = list.stream()
                 .filter(p -> p.getNumericPrice() <= maxBudget)
-                .collect(Collectors.toList());
+                .filter(p -> {
+                    Double lat = safeParseDouble(p.getMapY());
+                    Double lon = safeParseDouble(p.getMapX());
+                    return lat != null && lon != null && calculateDistance(baseLat, baseLon, lat, lon) <= 5.0;
+                })
+                .collect(Collectors.toList()); // ✅ 불변 리스트 → 가변 리스트로 변경
 
+        if (filtered.isEmpty()) return 0;
         Collections.shuffle(filtered);
-        int used = 0, count = 0;
-        for (Place p : filtered) {
-            if (count >= maxCount) break;
-            int price = p.getNumericPrice();
-            if (used + price <= maxBudget) {
-                target.add(new PlaceDto(p.getPlaceName(), p.getCategory().getDisplayName(), time, price));
-                used += price;
-                count++;
-            }
-        }
-        return used;
+
+        Place p = filtered.get(0);
+        target.add(new PlaceDto(p.getPlaceName(), p.getCategory().getDisplayName(), time, p.getNumericPrice()));
+
+        return p.getNumericPrice();
     }
 
+    /** ✅ 플랜 저장 */
     @Transactional
     public Long createPlanByAi(AiPlanCreateRequestDto request, User user) {
-        List<DayPlanDto> dayPlanDtos = generatePlan(request);
-        Plan savedPlan = planRepository.save(null); // TODO: 실제 저장 로직 구현 필요
-        return savedPlan.getId();
+        PlanResponseDto planResponse = generatePlan(request);
+
+        Plan plan = Plan.builder()
+                .title(request.getPlanTitle())
+                .budget(request.getBudget())
+                .duration(request.getDuration())
+                .totalPrice(request.getBudget())
+                .usedCost(planResponse.totalUsedCost())
+                .user(user)
+                .build();
+
+        for (int dayIndex = 0; dayIndex < planResponse.days().size(); dayIndex++) {
+            DayPlanDto dayPlan = planResponse.days().get(dayIndex);
+            int dayNumber = dayIndex + 1;
+
+            for (PlaceDto placeDto : dayPlan.places()) {
+                List<Place> places = placeRepository.findByTitle(placeDto.place());
+                Place place = places.isEmpty() ? null : places.get(0);
+                LocalTime[] times = timeMap.getOrDefault(placeDto.time(), new LocalTime[]{LocalTime.of(9, 0), LocalTime.of(10, 0)});
+
+                PlanPlace planPlace = PlanPlace.builder()
+                        .plan(plan)
+                        .place(place)
+                        .dayNumber(dayNumber)
+                        .cost(placeDto.cost())
+                        .type(placeDto.type())
+                        .time(placeDto.time())
+                        .budget(dayPlan.totalBudget())
+                        .totalPrice(dayPlan.usedCost())
+                        .startTime(times[0])
+                        .endTime(times[1])
+                        .build();
+
+                plan.addPlanPlace(planPlace);
+            }
+        }
+
+        return planRepository.save(plan).getId();
     }
 }
